--- a/views/layout.erb
+++ b/views/layout.erb
@@ -39,7 +39,7 @@
 		<div class="container">
 
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="/">Sinatra + Twitter Bootstrap</a>
+				<a class="navbar-brand" href="/">My Website</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -47,9 +47,14 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
+							<a class="nav-link" href="/">Blabla <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item active">
 							<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 						</li>
-						
+						<li class="nav-item active">
+							<a class="nav-link" href="/">Contacts <span class="sr-only">(current)</span></a>
+						</li>
 					</ul>
 				</div>
 			</nav>
