--- a/views/layout.erb
+++ b/views/layout.erb
@@ -50,7 +50,7 @@
 							<a class="nav-link" href="/">Blabla <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item active">
-							<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="/vizit">Записаться <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item active">
 							<a class="nav-link" href="/">Contacts <span class="sr-only">(current)</span></a>
