--- a/views/vizit.erb
+++ b/views/vizit.erb
@@ -7,35 +7,31 @@
 <form action="/vizit" method="POST" role="form">
   <div class="mb-3">
     <label  class="form-label">Ваше имя</label>
-    <input name="username" type="text" class="form-control"  placeholder="Ваше имя" value="<%= @username %>">
+    <input name="client[name]" type="text" class="form-control"  placeholder="Ваше имя" value="">
   </div>
   <div class="mb-3">
     <label  class="form-label">Ваш номер телефона</label>
-    <input name="phone" type="text" class="form-control"  placeholder="Ваш номер телефона" value="<%= @phone %>">
+    <input name="client[phone]" type="text" class="form-control"  placeholder="Ваш номер телефона" value="">
   </div>
   <div class="mb-3">
     <label  class="form-label">Дата и время</label>
-    <input id="datetimepicker" name="datetime" type="text" class="form-control"  placeholder="Дата и время" value="<%= @datetime %>">
+    <input id="datetimepicker" name="client[datestamp]" type="text" class="form-control"  placeholder="Дата и время" value="">
   </div>
-  <div class="mb-3">
+   <div class="mb-3">
     <label for="barber" class="form-label">Выберете парикмахера</label>
-    <select name="barber" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+    <select name="client[barber]" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
        <option value="none" selected>Парикмахеры</option>
-
-       <!-- <option <%= @barber == 'Walter White' ? 'selected' : '' %>>Walter White</option>
-        <option <%= @barber == 'Jessie Pinkman' ? 'selected' : '' %>>Jessie Pinkman</option>
-        <option <%= @barber == 'Gus Fring' ? 'selected' : '' %>>Gus Fring</option> -->
-
+      
         <% @barbers.each do |item| %>
           <option <%= @barber == item['name'] ? 'selected' : '' %>><%= item['name']%></option>
         <% end %>
     </select>
-  </div> 
+  </div> -->
   <div class="mb-3">
     <%# <label for="exampleColorInput" class="form-label">Выберете цвет в который Вас покрасить</label>
       <input name="color" type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color"> %>
     <label for="color" class="form-label">Выберете цвет в который Вас покрасить - </label>
-    <select id="color" name="color">
+    <select id="color" name="client[color]">
       <option value="#7bd148">Green</option>
       <option value="#5484ed">Bold blue</option>
       <option value="#a4bdfc">Blue</option>
