display error text

--- a/views/vizit.erb
+++ b/views/vizit.erb
@@ -26,7 +26,7 @@
           <option <%= @barber == item['name'] ? 'selected' : '' %>><%= item['name']%></option>
         <% end %>
     </select>
-  </div> -->
+  </div> 
   <div class="mb-3">
     <%# <label for="exampleColorInput" class="form-label">Выберете цвет в который Вас покрасить</label>
       <input name="color" type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color"> %>
