--- a/views/layout.erb
+++ b/views/layout.erb
@@ -61,7 +61,7 @@
 
 			<div>
 				<%if @error && @error.length > 0 then %>
-						<div class="alert alert-error"><%=@error%></div>
+						<div class="alert alert-danger"><%=@error%></div>
 				<% end %>
 				<%= yield %>
 			</div>
