--- a/views/layout.erb
+++ b/views/layout.erb
@@ -53,6 +53,9 @@
 							<a class="nav-link" href="/vizit">Записаться <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item active">
+							<a class="nav-link" href="/bookings">Список записавшихся <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item active">
 							<a class="nav-link" href="/">Contacts <span class="sr-only">(current)</span></a>
 						</li>
 					</ul>
